feat: add /api/v2/status
